# planck-layout

./: Makefile  generate_layout.sh  keymap.yaml  keymap_drawer.config.yaml  pyproject.toml  qmk.sh  readme.md
.github/workflows/: draw-keymaps.yaml  draw-keymaps.yml  draw-qmk.yml  generate-layout.yaml
keymap/: keymap.c
