[tool.poetry]
name = "planck-layout"
version = "0.1.0"
description = "Initial layout for my planck keyboard"
authors = ["Alexander Büscher <alibue@hotmail.de>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
qmk = "^1.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
